--- a/about.html
+++ b/about.html
@@ -44,6 +44,14 @@
   
             <h2>About Me</h2>
             <h3>Hello, my name is Jakob.</h3>
+
+            <iframe 
+    src="https://www.instagram.com/yourusername/" 
+    width="100%" 
+    height="600" 
+    frameborder="0" 
+    scrolling="yes">
+</iframe>
  
     </div>
 
